<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/team"/>

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/name"
        android:fontFamily="@font/lobster_regular"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />
    
     <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appNameTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="82dp"
        android:fontFamily="@font/lobster_regular"
        android:gravity="center"
        android:text="@string/outro"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/startButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="553dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/button1"
        android:textSize="20sp"
        android:textColor="@color/white" />
</RelativeLayout>
